discussion/kv_engine/163786/163786_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48529: Remove unnecessary/test-only CheckpointConfig ctor

Change-Id: If547b06c8ef13de8f0eab4d6c865e43f71f1269d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-18 14:47:10.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-18 15:10:12.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35032/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_config.cc:81:42:
error: member access into incomplete type "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35032/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13542/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:81:42: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
    Configuration& configuration = engine.getConfiguration();
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:18:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:84:52: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
            std::make_unique<ChangeListener>(engine.getCheckpointConfig()));
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:18:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:87:52: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
            std::make_unique<ChangeListener>(engine.getCheckpointConfig()));
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:18:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:90:52: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
            std::make_unique<ChangeListener>(engine.getCheckpointConfig()));
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:18:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:93:52: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
            std::make_unique<ChangeListener>(engine.getCheckpointConfig()));
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:18:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13542/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:81:42:
error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13542/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16076/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41223/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3174/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15151/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15428/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23471/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3243/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
